--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Hello, world!</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <p>Lainyzine의 홈페이지에 오신 것을 환영합니다!</p>
-  </body>
+<html lang="">
+    <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+        <link rel="icon" href="/favicon.ico" />
+        <title>CJ그룹 매체 영향력 평가</title>
+    <script defer src="/js/vue.js"></script><script defer src="/js/app-library.js"></script><script defer src="/js/vendor-library.js"></script><script defer src="/js/app-shared.js"></script><script defer src="/js/common.js"></script><script defer src="/js/app.js"></script></head>
+    <body>
+        <noscript>
+            <strong>We're sorry but @cjmia/dashboard doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+        </noscript>
+        <div id="wrap"></div>
+        <!-- built files will be auto injected -->
+    </body>
 </html>
